--- a/helm-webapp/values.yaml
+++ b/helm-webapp/values.yaml
@@ -8,5 +8,5 @@ configmap:
     CUSTOM_HEADER: 'This app was deployed with helm!'
 
 image:
-  name: devopsjourney1/mywebapp
-  tag: lumigo2
+  name: nginx
+  tag: stable-alpine3.21
