--- a/dir-of-apps/app1.yaml
+++ b/dir-of-apps/app1.yaml
@@ -14,7 +14,7 @@ spec:
     directory:
       recurse: true    
   sources: []
-  project: default
+  project: backend
   syncPolicy:
     automated:
       prune: false
