--- a/apps/app2/templates/deployment.yaml
+++ b/apps/app2/templates/deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: {{ include "app3.fullname" . }}
   labels:
     {{- include "app3.labels" . | nindent 4 }}
+    {{- with .Values.podLabels }}
+    {{- toYaml . | nindent 8 }}
+    {{- end }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
